--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 	</head>
 	<body>
 		<div class="Top_contents">
